# pytest-containers

./: .coveragerc  .pre-commit-config.yaml  404.html  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: poetry_publish.yml  test_coverage.yml
advanced/: index.html
pytest_containers/: __init__.py  constants.py  invoker.py  plugin.py  process_spawner.py  protocols.py  services.py  subproc.py  utils.py
quickstart/: index.html
scripts/: dependencies.py
src/pytest_containers/: invoker.py  plugin.py  services.py  utils.py
tests/: docker-compose.yml  test_fixtures.py  test_plugin.py  test_services_are_started.py
tests/integration/: test_docker.py  test_fixtures.py  test_plugin.py  test_services_are_wrapped.py
tests/unit/: test_fixtures.py  test_utils.py
