[tool.poetry]
name = "pytest-containers"
version = "0.1.0"
description = "A pytest plugin for starting docker compose services around tests"
authors = ["symonk <jackofspaces@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "src/pytest_containers"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"
docker = "^6.0.1"


[tool.poetry.group.dev.dependencies]
towncrier = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pytest11]
pytest_containers = "src/pytest_containers/plugin.py"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_single_line = true
known_first_party = "src/pytest_containers/"
default_section = 'THIRDPARTY'
forced_separate = 'tests'

[tool.mypy]
mypy_path = "pytest_containers/"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = false
ignore_errors = false

[tool.black]
target-version = ['py39']
line-length = 120

[tool.docformatter]
recursive = true
wrap-summaries = 120
blank = true


[tool.towncrier]
directory = "changelog/"
filename = "changelog/changelog.rst"
package = "src/pytest_containers"
title_format = "{name} {version} ({project_date})"