[tool.poetry]
name = "pytest-containers"
version = "0.3.0"
description = "A pytest plugin for starting docker compose services around tests"
authors = ["symonk <jackofspaces@gmail.com>"]
license = "Apache License 2.0"
readme = "README.rst"
packages = [{include = "pytest_containers"}]
classifiers = [
    "Topic :: Framework :: Pytest"
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.2"
docker = "^6.1.3"


[tool.poetry.group.dev.dependencies]
towncrier = "^23.6.0"
httpx = "^0.25.0"
coverage = "^7.3.2"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"
mkdocstrings = "^0.23.0"
poetry-plugin-up = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pytest11]
pytest_containers = "pytest_containers.plugin"

[tool.mypy]
mypy_path = "pytest_containers/"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = false
ignore_errors = false

[tool.docformatter]
recursive = true
wrap-summaries = 120
blank = true

[tool.towncrier]
directory = "changelog/"
filename = "changelog/changelog.rst"
package = "pytest_containers"
title_format = "{name} {version} ({project_date})"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"